Fixed issues with .box elements not wrapping properly

--- a/code/style.css
+++ b/code/style.css
@@ -32,6 +32,7 @@ h1 {
 }
 
 .box-container .box {
+  display: table;
   float: left;
   margin-bottom: 10px;
   position: relative;
